[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
itertools = "0.12.0"
rayon = "1.8.0"

[[bin]]
name = "day12a"

[[bin]]
name = "day12b"

[[bench]]
name = "bench"
harness = false
